--- a/debian-base/Dockerfile
+++ b/debian-base/Dockerfile
@@ -16,9 +16,9 @@ RUN \
   apt-get install -y byobu curl git htop man unzip vim wget
 
 # Add files.
-ADD root/.bashrc /root/.bashrc
-ADD root/.gitconfig /root/.gitconfig
-ADD root/scripts /root/scripts
+#ADD root/.bashrc ~/.bashrc
+#ADD root/.gitconfig ~/.gitconfig
+#ADD root/scripts ~/scripts
 
 # Set environment variables.
 ENV HOME /root
@@ -26,7 +26,7 @@ ENV HOME /root
 # Define working directory.
 WORKDIR /root
 
-USER user
+#USER user
 
 # Define default command.
 CMD ["bash"]
