--- a/node-bower-grunt-sass-yeoman/Dockerfile
+++ b/node-bower-grunt-sass-yeoman/Dockerfile
@@ -1,6 +1,6 @@
 FROM dockerfile/nodejs-bower-grunt
 
-RUN apt-get install -y ruby1.9.1
+RUN apt-get install -y ruby1.9.1-dev
 
 RUN gem install sass compass && \
     npm install -g yo generator-angular coffee-script
