--- a/node-bower-grunt-sass-yeoman/Dockerfile
+++ b/node-bower-grunt-sass-yeoman/Dockerfile
@@ -3,5 +3,5 @@ FROM dockerfile/nodejs-bower-grunt
 RUN apt-get install -y ruby1.9.1-dev
 
 RUN gem install sass compass && \
-    npm install -g yo generator-angular coffee-script
+    npm install -g yo 
 
