updated dockers to reflect proper folder

--- a/grunt-extjs/Dockerfile
+++ b/grunt-extjs/Dockerfile
@@ -2,14 +2,13 @@ FROM sesteva/yeoman
 
 RUN npm install -g generator-extjs coffee-script
 
-RUN mkdir -p /home/project
+RUN mkdir -p /home/yeoman/project && \
+    chmod 777 -R /home/yeoman/project
 
-CMD cd /home/project && \
+CMD cd /home/yeoman/project && \
     npm install && \
     bower install --allow-root && \
     grunt serve
-
-WORKDIR /home/project
 
 EXPOSE 9000
 
