create new grunt base

--- a/grunt-polymer/Dockerfile
+++ b/grunt-polymer/Dockerfile
@@ -2,21 +2,14 @@ FROM sesteva/yeoman
 
 RUN npm install -g generator-polymer
 
-RUN mkdir -p /home/yeoman/project && \
-    chmod 777 -R /home/yeoman/project
+RUN mkdir -p /home/project && \
+    chmod 777 -R /home/project
 
-CMD cd /home/yeoman/project && \
+CMD cd /home/project && \
     npm install && \
     bower install --allow-root && \
     grunt serve
 
-RUN adduser --disabled-password --gecos "" yeoman; \
-  echo "yeoman ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers
-
-ENV HOME /home/yeoman
-
-USER yeoman
-
-WORKDIR /home/yeoman
+WORKDIR /home/project
 
 EXPOSE 9000
