--- a/grunt-project/Dockerfile
+++ b/grunt-project/Dockerfile
@@ -1,6 +1,4 @@
-FROM sesteva/yeoman
-
-RUN npm install -g generator-extjs coffee-script
+FROM sesteva/grunt-sass-coffee
 
 RUN mkdir -p /home/project && \
     chmod 777 -R /home/project
@@ -13,4 +11,3 @@ CMD cd /home/project && \
 WORKDIR /home/project
 
 EXPOSE 9000
-
