--- a/centos6-teamcity-agent-nodejs/Dockerfile
+++ b/centos6-teamcity-agent-nodejs/Dockerfile
@@ -4,17 +4,21 @@ MAINTAINER Santiago Esteva <santiagoesteva@gmail.com>
 
 RUN yum -y install wget unzip sudo gcc gcc-c++ kernel-devel tar
 
-RUN cd /tmp && \
-    wget http://nodejs.org/dist/node-latest.tar.gz && \
-    tar xvzf node-latest.tar.gz && \
-    rm -f node-latest.tar.gz && \
-    cd node-v* && \
-    ./configure && \
-    CXX="g++ -Wno-unused-local-typedefs" make && \
-    CXX="g++ -Wno-unused-local-typedefs" make install && \
-    cd /tmp && \
-    rm -rf /tmp/node-v* && \
-    npm install -g npm grunt-cli bower
+RUN \
+  cd /tmp && \
+  wget http://nodejs.org/dist/node-latest.tar.gz && \
+  tar xvzf node-latest.tar.gz && \
+  rm -f node-latest.tar.gz && \
+  cd node-v* && \
+  ./configure && \
+  CXX="g++ -Wno-unused-local-typedefs" make && \
+  CXX="g++ -Wno-unused-local-typedefs" make install && \
+  cd /tmp && \
+  rm -rf /tmp/node-v* && \
+  npm install -g npm && \
+  echo -e '\n# Node.js\nexport PATH="node_modules/.bin:$PATH"' >> /root/.bashrc
+
+RUN npm install -g grunt-cli bower
 
 RUN adduser teamcity
 
