--- a/centos6-teamcity-agent-nodejs/Dockerfile
+++ b/centos6-teamcity-agent-nodejs/Dockerfile
@@ -1,8 +1,15 @@
-FROM ariya/centos6-teamcity-agent
+FROM ariya/centos6-oracle-jre7
 
 MAINTAINER Santiago Esteva <santiagoesteva@gmail.com>
 
 RUN yum -y install wget unzip sudo gcc gcc-c++ kernel-devel tar
+
+ADD setup-agent.sh /setup-agent.sh
+RUN yum -y install wget unzip sudo
+
+RUN adduser --disabled-password --gecos "" teamcity
+RUN sed -i -e "s/%sudo.*$/%sudo ALL=(ALL:ALL) NOPASSWD:ALL/" /etc/sudoers
+RUN usermod -a -G sudo teamcity
 
 RUN \
   cd /tmp && \
