--- a/centos6-teamcity-agent-nodejs/Dockerfile
+++ b/centos6-teamcity-agent-nodejs/Dockerfile
@@ -2,29 +2,19 @@ FROM ariya/centos6-oracle-jre7
 
 MAINTAINER Santiago Esteva <santiagoesteva@gmail.com>
 
-RUN yum -y install wget unzip sudo gcc gcc-c++ kernel-devel tar
-
 ADD setup-agent.sh /setup-agent.sh
-RUN yum -y install wget unzip sudo
 
-RUN adduser teamcity && \
-  sed -i -e "s/%sudo.*$/%sudo ALL=(ALL:ALL) NOPASSWD:ALL/" /etc/sudoers
+RUN yum -y update
+RUN chmod +x /setup-agent.sh
+RUN yum -y install wget unzip sudo gcc gcc-c++ kernel-devel tar unzip git nodejs httpd xorg-x11-server-Xvfb firefox
 
-RUN \
-  cd /tmp && \
-  wget http://nodejs.org/dist/node-latest.tar.gz && \
-  tar xvzf node-latest.tar.gz && \
-  rm -f node-latest.tar.gz && \
-  cd node-v* && \
-  ./configure && \
-  CXX="g++ -Wno-unused-local-typedefs" make && \
-  CXX="g++ -Wno-unused-local-typedefs" make install && \
-  cd /tmp && \
-  rm -rf /tmp/node-v* && \
-  npm install -g npm && \
-  echo -e '\n# Node.js\nexport PATH="node_modules/.bin:$PATH"' >> /root/.bashrc
+## Fix for npm https://registry.hub.docker.com/_/centos/
+RUN yum --enablerepo=centosplus install -y npm
+RUN npm install -g bower grunt grunt-cli
 
-RUN npm install -g grunt-cli bower
+## RUN mkdir -p /usr/local/lib/selenium && wget -q -P /usr/local/lib/selenium http://selenium-release.storage.googleapis.com/2.43/selenium-server-standalone-2.43.1.jar
+
+RUN adduser teamcity
 
 EXPOSE 9090
 
